--- a/index.html
+++ b/index.html
@@ -101,18 +101,21 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_quarter">
           <article>
             <h6 class="heading">Plany w trakcie realizacji:</h6>
-            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Dzień informatyka/ programisty który odbędzie się w marcu</p>
-            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Rzecznik Praw Ucznia</p>
-            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Pierwszy dzień wiosny (złote 14, turniej w wyciskaniu na klate, finał turnieju w piłki nożnej)</p>
-            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Strona internetowa do radiowęzła (każdy uczeń będzie mógł dodać swoją piosenkę do kolejki)</p>
+            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Dzień programisty i informatyka, który odbędzie się pod koniec marca.</p>
+            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Pierwszy dzień wiosny.</p>
+            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Turniej w wyciskaniu na klatę.</p>
+            <p><span style="color: rgb(209, 170, 241); font-size: 18px;">•</span> Całkowicie nowa odsłona radiowezła (to wy wybieracie wasz ulubiony kawalek który będzie leciał).</p>
           </article>
         </li>
         <li class="one_quarter">
           <article>
             <h6 class="heading">Plany na przyszłość</h6>
-            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Dni tematyczne dla pozostałych zawodów</p>
-            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Dalsze turnieje e-sportowe (np. fifa, lol, cs:go)</p>
-            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Dni z określonym motywem</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Więcej turniejów sportowych i e-sportowych między klasami.</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Dni tematyczne.</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Miejsce dla was na wasze pomysły</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Koniec dzielenia ZS14 na dwa budynki</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Odnowienie filmów promujących naszą szkołę.</p>
+            <p><span style="color: rgb(119, 83, 49); font-size: 18px;">•</span> Całkowitą reaktywację tiktoka szkolnego</p>
           </article>
         </li>
         
